--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,6 @@ jobs:
 
             - name: Build project
               run: bun run build
+
+            - name: Run tests
+              run: bun test
