--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "target": "ESNext",
         "module": "NodeNext",
+        "types": ["bun-types"],
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
