--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
         "isolatedModules": true,
         "resolveJsonModule": true,
         "outDir": "./dist",
-        "rootDir": "./src"
+        "rootDir": "./src",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     },
     "include": ["src/**/*", "testing/e2e.test.ts"],
     "exclude": ["node_modules", "**/*.test.ts"]
