--- a/package.json
+++ b/package.json
@@ -1,31 +1,8 @@
 {
-    "name": "ilmtest-cli",
-    "version": "1.3.1",
-    "description": "CLI for IlmTest API.",
-    "source": "src/index.ts",
-    "main": "dist/main.js",
+    "author": "Ragaeeb Haq",
     "bin": {
         "ilmtest-cli": "./dist/index.js"
     },
-    "type": "module",
-    "scripts": {
-        "start": "bun run src/index.ts",
-        "build": "NODE_ENV=production bun build src/index.ts --outdir dist --target node --packages=external",
-        "compile": "NODE_ENV=production bun build src/index.ts --target node --compile --outfile dist/ilmtest-cli",
-        "test": "bun test"
-    },
-    "engines": {
-        "bun": ">=1.2.8"
-    },
-    "files": [
-        "dist/index.js"
-    ],
-    "keywords": [
-        "ocr",
-        "nodejs"
-    ],
-    "author": "Ragaeeb Haq",
-    "license": "MIT",
     "dependencies": {
         "@distube/ytdl-core": "^4.16.6",
         "@inquirer/prompts": "^7.4.1",
@@ -37,18 +14,42 @@
         "pino-pretty": "^13.0.0",
         "tafrigh": "^3.0.0"
     },
+    "description": "CLI for IlmTest API.",
     "devDependencies": {
         "@eslint/js": "^9.24.0",
         "@types/bun": "^1.2.8",
         "@types/cli-progress": "^3.11.6",
         "@types/node": "^22.14.0",
+        "@vitest/eslint-plugin": "^1.1.39",
         "eslint": "^9.24.0",
         "eslint-config-prettier": "^10.1.1",
-        "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-perfectionist": "^4.11.0",
         "eslint-plugin-prettier": "^5.2.6",
+        "globals": "^16.0.0",
         "prettier": "^3.5.3",
         "semantic-release": "^24.2.3",
         "typescript-eslint": "^8.29.0"
-    }
+    },
+    "engines": {
+        "bun": ">=1.2.8"
+    },
+    "files": [
+        "dist/index.js"
+    ],
+    "keywords": [
+        "ocr",
+        "nodejs"
+    ],
+    "license": "MIT",
+    "main": "dist/main.js",
+    "name": "ilmtest-cli",
+    "scripts": {
+        "build": "NODE_ENV=production bun build src/index.ts --outdir dist --target node --packages=external",
+        "compile": "NODE_ENV=production bun build src/index.ts --target node --compile --outfile dist/ilmtest-cli",
+        "start": "bun run src/index.ts",
+        "test": "bun test"
+    },
+    "source": "src/index.ts",
+    "type": "module",
+    "version": "1.4.0"
 }
