--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
         "ilmtest-cli": "./dist/index.js"
     },
     "dependencies": {
-        "@distube/ytdl-core": "^4.16.6",
+        "@distube/ytdl-core": "^4.16.8",
         "@inquirer/prompts": "^7.4.1",
         "baheth-sdk": "^1.2.1",
         "cli-progress": "^3.12.0",
         "cli-welcome": "^3.0.1",
         "conf": "^13.1.0",
+        "paragrafs": "^1.0.0",
         "pino": "^9.6.0",
         "pino-pretty": "^13.0.0",
-        "tafrigh": "^3.0.0"
+        "tafrigh": "^4.0.0"
     },
     "description": "CLI for IlmTest API.",
     "devDependencies": {
         "@eslint/js": "^9.24.0",
-        "@types/bun": "^1.2.8",
+        "@types/bun": "^1.2.10",
         "@types/cli-progress": "^3.11.6",
-        "@types/node": "^22.14.0",
-        "@vitest/eslint-plugin": "^1.1.39",
+        "@types/node": "^22.14.1",
+        "@vitest/eslint-plugin": "^1.1.42",
         "eslint": "^9.24.0",
-        "eslint-config-prettier": "^10.1.1",
+        "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-perfectionist": "^4.11.0",
         "eslint-plugin-prettier": "^5.2.6",
         "globals": "^16.0.0",
         "prettier": "^3.5.3",
         "semantic-release": "^24.2.3",
-        "typescript-eslint": "^8.29.0"
+        "typescript-eslint": "^8.30.1"
     },
     "engines": {
-        "bun": ">=1.2.8"
+        "bun": ">=1.2.9"
     },
     "files": [
         "dist/index.js"
@@ -41,7 +42,7 @@
         "nodejs"
     ],
     "license": "MIT",
-    "main": "dist/main.js",
+    "main": "dist/index.js",
     "name": "ilmtest-cli",
     "scripts": {
         "build": "NODE_ENV=production bun build src/index.ts --outdir dist --target node --packages=external",
@@ -51,5 +52,5 @@
     },
     "source": "src/index.ts",
     "type": "module",
-    "version": "1.4.0"
+    "version": "1.5.0"
 }
