--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     },
     "description": "CLI for IlmTest API.",
     "devDependencies": {
-        "@eslint/js": "^9.24.0",
+        "@eslint/js": "^9.25.0",
         "@types/bun": "^1.2.10",
         "@types/cli-progress": "^3.11.6",
         "@types/node": "^22.14.1",
-        "@vitest/eslint-plugin": "^1.1.42",
-        "eslint": "^9.24.0",
+        "@vitest/eslint-plugin": "^1.1.43",
+        "eslint": "^9.25.0",
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-perfectionist": "^4.11.0",
         "eslint-plugin-prettier": "^5.2.6",
@@ -32,14 +32,13 @@
         "typescript-eslint": "^8.30.1"
     },
     "engines": {
-        "bun": ">=1.2.9"
+        "bun": ">=1.2.10"
     },
     "files": [
         "dist/index.js"
     ],
     "keywords": [
-        "ocr",
-        "nodejs"
+        "ilmtest"
     ],
     "license": "MIT",
     "main": "dist/index.js",
