--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
             "@/*": ["./src/*"]
         }
     },
-    "include": ["src/**/*", "testing/e2e.test.ts"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules", "**/*.test.ts"]
 }
