--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
         "ilmtest-cli": "./dist/index.js"
     },
     "dependencies": {
-        "@distube/ytdl-core": "^4.16.8",
+        "@distube/ytdl-core": "4.16.8",
         "@inquirer/prompts": "^7.5.0",
         "baheth-sdk": "^1.2.2",
         "cli-progress": "^3.12.0",
         "cli-welcome": "^3.0.1",
         "conf": "^13.1.0",
-        "paragrafs": "^1.1.0",
+        "paragrafs": "^1.3.0",
         "pino": "^9.6.0",
         "pino-pretty": "^13.0.0",
+        "rabbito": "^1.0.0",
         "tafrigh": "^4.0.2"
     },
     "description": "CLI for IlmTest API.",
     "devDependencies": {
         "@eslint/js": "^9.25.1",
-        "@types/bun": "^1.2.10",
+        "@types/bun": "^1.2.11",
         "@types/cli-progress": "^3.11.6",
-        "@types/node": "^22.15.0",
-        "@vitest/eslint-plugin": "^1.1.43",
+        "@types/node": "^22.15.3",
+        "@vitest/eslint-plugin": "^1.1.44",
         "eslint": "^9.25.1",
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-perfectionist": "^4.12.3",
@@ -29,7 +30,7 @@
         "globals": "^16.0.0",
         "prettier": "^3.5.3",
         "semantic-release": "^24.2.3",
-        "typescript-eslint": "^8.31.0"
+        "typescript-eslint": "^8.31.1"
     },
     "engines": {
         "bun": ">=1.2.10"
@@ -51,5 +52,5 @@
     },
     "source": "src/index.ts",
     "type": "module",
-    "version": "1.6.0"
+    "version": "1.7.0"
 }
