--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     },
     "dependencies": {
         "@distube/ytdl-core": "4.16.8",
-        "@inquirer/prompts": "^7.5.1",
+        "@inquirer/prompts": "^7.5.3",
         "baheth-sdk": "^1.2.2",
         "cli-progress": "^3.12.0",
         "cli-welcome": "^3.0.1",
         "conf": "^13.1.0",
+        "kokokor": "^1.4.0",
         "paragrafs": "^1.4.0",
         "pino": "^9.7.0",
         "pino-pretty": "^13.0.0",
@@ -18,22 +19,22 @@
     },
     "description": "CLI for IlmTest API.",
     "devDependencies": {
-        "@eslint/js": "^9.27.0",
-        "@types/bun": "^1.2.13",
+        "@eslint/js": "^9.28.0",
+        "@types/bun": "^1.2.15",
         "@types/cli-progress": "^3.11.6",
-        "@types/node": "^22.15.19",
-        "@vitest/eslint-plugin": "^1.2.0",
-        "eslint": "^9.27.0",
+        "@types/node": "^22.15.29",
+        "@vitest/eslint-plugin": "^1.2.1",
+        "eslint": "^9.28.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-perfectionist": "^4.13.0",
-        "eslint-plugin-prettier": "^5.4.0",
-        "globals": "^16.1.0",
+        "eslint-plugin-prettier": "^5.4.1",
+        "globals": "^16.2.0",
         "prettier": "^3.5.3",
-        "semantic-release": "^24.2.4",
-        "typescript-eslint": "^8.32.1"
+        "semantic-release": "^24.2.5",
+        "typescript-eslint": "^8.33.0"
     },
     "engines": {
-        "bun": ">=1.2.10"
+        "bun": ">=1.2.15"
     },
     "files": [
         "dist/index.js"
@@ -52,5 +53,5 @@
     },
     "source": "src/index.ts",
     "type": "module",
-    "version": "1.7.0"
+    "version": "1.8.0"
 }
