--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
         "@distube/ytdl-core": "4.16.8",
         "@inquirer/prompts": "^7.5.3",
         "baheth-sdk": "^1.2.2",
+        "bitaboom": "^1.3.0",
         "cli-progress": "^3.12.0",
         "cli-welcome": "^3.0.1",
         "conf": "^14.0.0",
-        "kokokor": "^1.6.0",
-        "paragrafs": "^1.4.0",
         "pino": "^9.7.0",
         "pino-pretty": "^13.0.0",
         "rabbito": "^1.0.0",
@@ -20,10 +19,10 @@
     "description": "CLI for IlmTest API.",
     "devDependencies": {
         "@eslint/js": "^9.28.0",
-        "@types/bun": "^1.2.15",
+        "@types/bun": "^1.2.16",
         "@types/cli-progress": "^3.11.6",
-        "@types/node": "^22.15.30",
-        "@vitest/eslint-plugin": "^1.2.1",
+        "@types/node": "^24.0.1",
+        "@vitest/eslint-plugin": "^1.2.4",
         "eslint": "^9.28.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-perfectionist": "^4.14.0",
@@ -31,10 +30,10 @@
         "globals": "^16.2.0",
         "prettier": "^3.5.3",
         "semantic-release": "^24.2.5",
-        "typescript-eslint": "^8.33.1"
+        "typescript-eslint": "^8.34.0"
     },
     "engines": {
-        "bun": ">=1.2.15"
+        "bun": ">=1.2.16"
     },
     "files": [
         "dist/index.js"
@@ -53,5 +52,5 @@
     },
     "source": "src/index.ts",
     "type": "module",
-    "version": "1.9.0"
+    "version": "1.10.0"
 }
